Fix server url in index.html

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.js"></script>
 <script type="text/javascript">
 	"use strict"
-	const ServerUrl = 'http://localhost'//%replace_as_server_url%'
+	const ServerUrl = 'http://%replace_as_server_url%'
 	const MiscArtCategory = '其他'
 
 	/**
